--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Administrador de Pacientes</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" type="image/jpg" href="/src/img/favicon.jpg" />
+    <link rel="icon" type="image/jpg" href="/img/favicon.jpg" />
 </head>
 
 <body>
